# SpecFlow-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260324_0001_initial_schema.py
docs/: cli-workflow.md  development-plan.md  system-architecture.md  v1-release.md
src/specflow/: __init__.py
src/specflow/agents/: __init__.py  review_loop.py
src/specflow/api/: __init__.py  app.py
src/specflow/cli/: __init__.py  main.py
src/specflow/config/: __init__.py  settings.py
src/specflow/llm/: __init__.py  factory.py
src/specflow/mcp/: __init__.py  builtin.py  errors.py  sandbox.py  server.py  types.py
src/specflow/models/: __init__.py  artifact.py  enums.py  execution_event.py  project.py  review_issue.py  run.py  task_item.py  template_profile.py
src/specflow/orchestrator/: __init__.py  harness.py  human_gate.py  logging.py  models.py  supervisor.py
src/specflow/storage/: __init__.py  artifacts.py  checkpoints.py  layout.py  runtime.py  types.py
src/specflow/templates/: __init__.py  library.py  profiles.py
tests/: __init__.py  conftest.py
tests/agents/: __init__.py  test_architect.py  test_coder_reviewer.py
tests/cli/: test_main.py
tests/config/: test_settings.py
tests/llm/: test_factory.py
tests/mcp/: __init__.py  test_scaffold_and_quality_tools.py  test_server.py  test_template_tools.py  test_workspace_and_spec_tools.py
tests/models/: test_metadata.py
tests/orchestrator/: __init__.py  test_supervisor.py
tests/storage/: __init__.py  test_artifact_repository.py  test_checkpoint_manager.py  test_run_state_manager.py
(+20 files in other folders)
